# linuxdo-reader

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: design.md  mcp-config.example.json
docs/superpowers/plans/: 2026-07-01-cookie-auth.md
linuxdo_agent/: browser.py  cli.py  client.py  digest.py  mcp_server.py  models.py  service.py  storage.py
linuxdo_reader/: cli.py  client.py  mcp_server.py
skills/linuxdo-reader/: SKILL.md
skills/linuxdo-reader/agents/: openai.yaml
src/linuxdo_reader/: browser.py  cli.py  client.py  cookies.py  digest.py  feeds.py  installer.py  mcp_server.py  models.py  sample_data.py  service.py  storage.py
tests/: conftest.py  fixtures.py  test_browser.py  test_cli.py  test_client.py  test_cookies.py  test_digest.py  test_feeds.py  test_installer.py  test_release_workflow.py  test_service.py  test_storage.py
