[project]
name = "linuxdo-reader"
version = "0.1.0"
description = "Linux.do topic and comment reader with local cache"
readme = "README.md"
authors = [
    { name = "Kada Liao", email = "kadaliao@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "mcp>=1.10.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
linuxdo-reader = "linuxdo_reader.cli:app"
linuxdo-reader-mcp = "linuxdo_reader.mcp_server:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linuxdo_reader"]
