[project]
name = "linuxdo-reader"
version = "0.1.3"
description = "Skill helper for reading Linux.do topics and discussion floors"
readme = "README.md"
authors = [
    { name = "Kada Liao", email = "kadaliao@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
linuxdo-reader = "linuxdo_reader.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
